--- a/src/styles/cyberpunk.css
+++ b/src/styles/cyberpunk.css
@@ -1,9 +1,61 @@
+/* 01101000 01100101 01101100 01101100 01101111 00100001  */
+
 a {
-   color:#818252;
+   color:#5994ce;
 }
 
 a:hover {
-  color:#818252;
+  color:#5994ce;
+}
+
+.flex.flex-1.bg-theme-feature.rounded-lg.p-10.overflow-y-auto {
+   -moz-box-shadow:    inset 0 0 8px #5c58b6;
+   -webkit-box-shadow: inset 0 0 8px #5c58b6;
+   box-shadow:         inset 0 0 8px #5c58b6;
+}
+
+.AppSidemenu__container__scrollable.flex-1.overflow-y-auto.flexify.justify-between.bg-theme-feature {
+   -moz-box-shadow:    inset 0 0 8px #5c58b6;
+   -webkit-box-shadow: inset 0 0 8px #5c58b6;
+   box-shadow:         inset 0 0 8px #5c58b6;
+}
+
+.bg-theme-feature.rounded-lg {
+   -moz-box-shadow:    inset 0 0 8px #5c58b6;
+   -webkit-box-shadow: inset 0 0 8px #5c58b6;
+   box-shadow:         inset 0 0 8px #5c58b6;
+}
+
+.WalletAll__heading.px-8.py-6.mb-3 {
+   -moz-box-shadow:    inset 0 0 8px #5c58b6;
+   -webkit-box-shadow: inset 0 0 8px #5c58b6;
+   box-shadow:         inset 0 0 8px #5c58b6;
+}
+
+.WalletHeading {
+   -moz-box-shadow:    inset 0 0 8px #5c58b6;
+   -webkit-box-shadow: inset 0 0 8px #5c58b6;
+   box-shadow:         inset 0 0 8px #5c58b6;
+}
+
+.WalletSidebar {
+   -moz-box-shadow:    inset 0 0 8px #5c58b6;
+   -webkit-box-shadow: inset 0 0 8px #5c58b6;
+   box-shadow:         inset 0 0 8px #5c58b6;
+}
+
+.MenuTab__content.p-5 {
+   -moz-box-shadow:    inset 0 0 8px #5c58b6;
+   -webkit-box-shadow: inset 0 0 8px #5c58b6;
+   box-shadow:         inset 0 0 8px #5c58b6;
+}
+
+.font-semibold.text-theme-page-text-light {
+	color:#5994ce;
+}
+
+.WalletAll__balance__alternative.text-sm.font-bold.text-theme-page-text-light.ml-1 {
+	color:#5994ce;
 }
 
 .absolute.pin-t.pin-l.h-40.w-40 {
@@ -11,15 +63,51 @@ a:hover {
 }
 
 .AppSidemenu__logo {
-   background:rgba(129, 130, 82, .30);
+   background:rgba(92, 88, 182, .30);
+   -moz-box-shadow:    inset 0 0 8px #5c58b6;
+   -webkit-box-shadow: inset 0 0 8px #5c58b6;
+   box-shadow:         inset 0 0 8px #5c58b6;
+   
+   -moz-transition:all 0.5s ease-in-out;
+    -webkit-transition:all 0.5s ease-in-out;
+    -o-transition:all 0.5s ease-in-out;
+    -ms-transition:all 0.5s ease-in-out;
+    transition:all 0.5s ease-in-out;
+    -moz-animation:blink normal 3s infinite ease-in-out;
+    -webkit-animation:blink normal 3s infinite ease-in-out;
+    -ms-animation:blink normal 3s infinite ease-in-out;
+    animation:blink normal 3s infinite ease-in-out;
+}
+
+@keyframes blink {
+    0% {
+           background-color: rgba(92, 88, 182, 1)
+    }
+    50% {
+           background-color: rgba(92, 88, 182, 0.5)
+    }
+    100% {
+           background-color: rgba(92, 88, 182, 1)
+    }
+}
+@-webkit-keyframes blink {
+    0% {
+           background-color: rgba(92, 88, 182, 1)
+    }
+    50% {
+           background-color: rgba(92, 88, 182, 0.5)
+    }
+    100% {
+           background-color: rgba(92, 88, 182, 1)
+    }
 }
 
 .WalletGrid__wallet__name {
-   color:#818252;
+   color:#b957ce;
 }
 
 .MenuTab__nav__item {
-	color:#818252;
+	color:#b957ce;
 }
 
 .MenuOptions {
@@ -31,7 +119,7 @@ a:hover {
 }
 
 .bg-theme-settings-sub {
-	background:#818252;
+	background:#b957ce;
 }
 
 .ButtonReload {
@@ -43,7 +131,7 @@ a:hover {
 }
 
 .ButtonSwitch__circle {
-	background:#818252;
+	background:#b957ce;
 }
 
 .theme-plugin-cyberpunk-theme {
@@ -57,7 +145,7 @@ a:hover {
   --theme-intro-gradient-1: rgba(255,255,255,0);
   --theme-intro-gradient-2: rgba(255,255,255,0.95);
 
-  --theme-header-text: #818252;
+  --theme-header-text: #b957ce;
   --theme-caption-text: #000;
   --theme-caption-read: #8795a1;
   --theme-announcements-gradient-1: rgba(255,255,255,0);
@@ -66,7 +154,7 @@ a:hover {
   --theme-line-separator: #191919;
   --theme-wallet-overview-border: #191919;
 
-  --theme-table-row-hover: rgba(255, 255, 255, .10);
+  --theme-table-row-hover: rgba(89, 148, 206, .20);
   --theme-transaction-sent: #191919;
   --theme-transaction-sent-arrow: #fe2f33;
   --theme-transaction-received: #191919;
@@ -87,45 +175,45 @@ a:hover {
   --theme-wallet-grid-shadow: 0 5px 30px rgba(124,138,192,0.22);
 
   --theme-feature: rgba(0, 0, 0, .4);
-  --theme-feature-item-text: #818252;
-  --theme-feature-item-hover: #818252;
+  --theme-feature-item-text: #b957ce;
+  --theme-feature-item-hover: #b957ce;
   --theme-feature-item-alternative: rgba(0, 0, 0, .30);
-  --theme-feature-item-alternative-text: #818252;
-  --theme-feature-item-hover-text: #818252;
+  --theme-feature-item-alternative-text: #b957ce;
+  --theme-feature-item-hover-text: #b957ce;
   --theme-feature-item-selected: rgba(0, 0, 0, .30);
   --theme-feature-item-selected-text: #e5e5e5;
-  --theme-feature-item-indicator: #818252;
+  --theme-feature-item-indicator: #b957ce;
 
   --theme-secondary-feature: #f7f9fb;
 
   --theme-button-special-choice: #1e1e1e;
 
   --theme-heading-background: rgba(255,255,255,.0);
-  --theme-heading-text: #818252;
+  --theme-heading-text: #b957ce;
 
   --theme-chart-background: rgba(0, 0, 0, .0);
   --theme-chart-price: #969696;
 
   --theme-button: #191919;
   --theme-button-active: rgba(0, 0, 0, .30);
-  --theme-button-active-hover: red;
-  --theme-button-text: #818252;
+  --theme-button-active-hover: rgba(255, 255, 255, .10);
+  --theme-button-text: #b957ce;
   --theme-button-light: #f1f5f8;
   --theme-button-light-text: #8795a1;
   --theme-button-inner-box: #161616;
   --theme-action-button: #191919;
-  --theme-action-button-text: #818252;
+  --theme-action-button-text: #b957ce;
   --theme-action-button-text-hover: #789fba;
   --theme-option-button: #3d456d;
   --theme-option-button-hover: #cc5e60;
-  --theme-option-button-text: #818252;
+  --theme-option-button-text: #b957ce;
   --theme-switch-button: #191919;
   --theme-option-heading-button: rgba(0, 0, 0, .30);
   --theme-option-heading-button-hover: rgba(255, 255, 255, .10);
-  --theme-option-heading-button-text: #818252;
+  --theme-option-heading-button-text: #b957ce;
   --theme-input-toggle-choice: #f1f5f8;
   --theme-input-toggle-choice-text: #606f7b;
-  --theme-input-field-border: #818252;
+  --theme-input-field-border: #b957ce;
   --theme-modal-footer-button: #e7d28e;
   --theme-modal-footer-button-text: #b3a36f;
 
@@ -136,17 +224,17 @@ a:hover {
   --theme-settings-hover: #f0f1f8;
   --theme-settings-sub: #2d3747; /* NOTE: not used on light theme */
   --theme-settings-button: #2d3747; /* NOTE: not used on light theme */
-  --theme-settings-heading: #818252;
-  --theme-settings-border: #818252;
-  --theme-settings-text: #818252;
-  --theme-settings-text-hover: #818252;
+  --theme-settings-heading: #b957ce;
+  --theme-settings-border: #b957ce;
+  --theme-settings-text: #b957ce;
+  --theme-settings-text-hover: #b957ce;
   --theme-settings-switch: #d5d5d5;
-  --theme-settings-control-title: #818252;
+  --theme-settings-control-title: #b957ce;
 
   --theme-voting-banner-background: #101010;
-  --theme-voting-banner-text: #818252;
+  --theme-voting-banner-text: #b957ce;
   --theme-voting-banner-button: #181818;
-  --theme-voting-banner-button-hover: #818252;
+  --theme-voting-banner-button-hover: #b957ce;
   --theme-voting-banner-button-text: #90a9c6;
   --theme-voting-banner-button-text-hover: #6785a9;
 
